--- a/package.json
+++ b/package.json
@@ -30,5 +30,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/icons-ant-design": "^1.0.8",
+    "@iconify/icons-bytesize": "^1.0.3",
+    "@iconify/icons-carbon": "^1.0.2",
+    "@iconify/icons-cil": "^1.0.3",
+    "@iconify/icons-ion": "^1.0.12",
+    "@iconify/react": "^1.1.3"
   }
 }
